--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index"
+    "start": "node index"
   },
   "author": "jonnadula chaitanya",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "help": "^3.0.2"
+  }
 }
