--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node index"
   },
   "author": "jonnadula chaitanya",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
