--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watch": "nodemon ./express_module.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node express_module"
   },
   "author": "jonnadula chaitanya",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "morgan": "^1.9.0",
-    "nodemon": "^1.3.8"
+    "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
